# ml-system

./: .gitignore  .pre-commit-config.yaml  dockerfile  justfile  pyproject.toml
.github/workflows/: cml.yaml
app/: inference_endpoint.py  training_endpoint.py
artifacts/model/: full_model_pipeline.joblib
artifacts/preprocessor/: preprocessor.joblib
configs/: config.yaml
configs/data/: data.yaml
configs/features/: features.yaml
configs/models/: models.yaml
configs/pipeline/: pipeline.yaml
outputs/2025-12-12/17-00-09/.hydra/: hydra.yaml
outputs/2025-12-12/17-01-33/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-12/17-02-31/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-12/17-02-50/.hydra/: hydra.yaml
outputs/2025-12-12/17-05-28/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-12-12/17-06-06/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-12-12/17-07-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-12/17-07-07/.hydra/: config.yaml  hydra.yaml
scripts/data/: loader.py
scripts/utils/: saving_utils.py
src/ml_system/: __init__.py  feature_pipeline.py  inference_pipeline.py
src/ml_system/pipelines/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/ml_system/scripts/data/: loader.py
src/ml_system/scripts/features/: feature_store.py  preprocess.py
src/ml_system/scripts/inference/: make_predictions.py
src/ml_system/scripts/models/: xgb.py
src/ml_system/scripts/utils/: loading_utils.py  saving_utils.py
src/ml_system/scripts/validation/: data_validator.py
