[project]
name = "ml-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "harish gehlot", email = "gehloth03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "hydra-core>=1.3.2",
    "rust-just>=1.45.0",
]

[project.scripts]
ml-system = "ml_system:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
